<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/headlines"
        android:icon="@drawable/ic_headlines"
        android:contentDescription="@string/cd_headlines"
        android:title="@string/title_headlines" />
    <item
        android:id="@+id/sources"
        android:icon="@drawable/ic_sources"
        android:contentDescription="@string/cd_sources"
        android:title="@string/title_sources" />
    <item
        android:id="@+id/saved"
        android:icon="@drawable/ic_saved"
        android:contentDescription="@string/cd_saved"
        android:title="@string/title_saved" />
</menu>
